# moquist

./: Cargo.toml  Dockerfile  README.md  data.json5
.github/workflows/: publish.yaml
src/: fake.rs  main.rs  routes.rs  schemas.rs  values.rs
