[package]
name = "moquist"
version = "0.1.0"
edition = "2021"
rust-version = "1.81.0"

[dependencies]
chrono = { version = "0.4.38", default-features = false, features = ["now"] }
serde_json = "1.0.128"
serde_json5 = { git = "https://github.com/google/serde_json5" }
server_nano = "0.2.1"
uuid = "1.10.0"

[profile.release]
lto = true
strip = "debuginfo"
